# punch-chimp-sdl2

src/: CMakeLists.txt  main.cpp
src/graphics/sprite/: sprite.cpp  sprite.hpp
src/objects/chimp/: chimp.cpp  chimp.hpp
src/objects/fist/: fist.cpp  fist.hpp
src/text/: text.cpp  text.hpp
src/window/: window.cpp  window.hpp
